Change the content of the menu
Make the website responsive for users of multiple devices

--- a/index.html
+++ b/index.html
@@ -121,44 +121,28 @@
                 <p>Doughnuts</p>
                 <span>$5.35</span>
               </li>
-              <li>
-                <p>Cheesecake</p>
-                <span>$7.45</span>
-              </li>
-              <li>
-                <p>Coffee Cake</p>
-                <span>$10.25</span>
-              </li>
             </ul>
           </div>
           <!-- TEA -->
           <div class="col col-12 col-md-6 move-up">
-            <h3 class = "menu-list-title">BAKERY</h2>
+            <h3 class = "menu-list-title">TEA</h2>
             <hr>
             <ul>
               <li>
-                <p class = "list-item">Cookies</p>
-                <span class = "item-price">$3.25</span>
+                <p class = "list-item">Jasmine</p>
+                <span class = "item-price">$5.25</span>
               </li>
               <li>
-                <p>Croissant</p>
-                <span>$4.55</span>
+                <p>Chamomile</p>
+                <span>$6.99</span>
               </li>
               <li>
-                <p>Bagel</p>
-                <span>$4.70</span>
+                <p>Masala</p>
+                <span>$7.85</span>
               </li>
               <li>
-                <p>Doughnuts</p>
-                <span>$5.35</span>
-              </li>
-              <li>
-                <p>Cheesecake</p>
-                <span>$7.45</span>
-              </li>
-              <li>
-                <p>Coffee Cake</p>
-                <span>$10.25</span>
+                <p>Oolong</p>
+                <span>$7.99</span>
               </li>
             </ul>
           </div>
@@ -168,6 +152,8 @@
     </div>
 
   </div>
+  <br>
+  <br>
   <!--Contact Container-->
   <div class = "container-lg" id = "contact">
     <div class="row">
