Optimize the website for laptop users

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1">
   <title>Cité Bakery & Tea</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -17,44 +17,47 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
-<body>
-  <!--nav bar -->
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand cite-font" href="index.html">CITÉ Bakery & Tea</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item px-3 hover-yellow">
-            <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-          </li>
-          <li class="nav-item px-3">
-            <a class="nav-link" href="#about">WELCOME</a>
-          </li>
-          <li class="nav-item px-3">
-            <a class="nav-link" href="#menu">MENU</a>
-          </li>
-          <li class="nav-item px-3">
-            <a class="nav-link" href="#contact">CONTACT</a>
-          </li>
-          <!--Facebook-->
-          <div class="nav-item px-3">
-            <a class="nav-link" href="https://www.facebook.com/citebakery/" target="_blank"><img
-                src="https://cdn-icons-png.flaticon.com/512/1051/1051309.png" alt="facebook-icon" height=25px></a>
-          </div>
-          <!--Instagram-->
-          <li class="nav-item px-3">
-            <a class="nav-link" href="https://www.instagram.com/citebakery/" target="_blank"><img
-                src="https://cdn-icons-png.flaticon.com/512/1400/1400829.png" alt="instagram-icon" height=25px></a>
-          </li>
-
-        </ul>
+<header>
+    <!--nav bar -->
+    <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand cite-font" href="index.html">CITÉ Bakery & Tea</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item px-3 hover-yellow">
+              <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link" href="#about">WELCOME</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link" href="#menu">MENU</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link" href="#contact">CONTACT</a>
+            </li>
+            <!--Facebook-->
+            <div class="nav-item px-3">
+              <a class="nav-link" href="https://www.facebook.com/citebakery/" target="_blank"><img
+                  src="https://cdn-icons-png.flaticon.com/512/1051/1051309.png" alt="facebook-icon" height=25px></a>
+            </div>
+            <!--Instagram-->
+            <li class="nav-item px-3">
+              <a class="nav-link" href="https://www.instagram.com/citebakery/" target="_blank"><img
+                  src="https://cdn-icons-png.flaticon.com/512/1400/1400829.png" alt="instagram-icon" height=25px></a>
+            </li>
+  
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+</header>
+<body>
+
 
   <!--Parallax Effect-->
   <div class="parallax"></div>
@@ -155,7 +158,7 @@
   <br>
   <br>
   <!--Contact Container-->
-  <div class = "container-lg" id = "contact">
+  <div class = "container-lg bottom-container" id = "contact">
     <div class="row">
       <div class="col col-lg-6 col-md-12 col-12 px-5">
         <h2>GET IN TOUCH</h2>
