--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <div class="col-lg-6 align-center">
         <img
-          src="https://images.squarespace-cdn.com/content/v1/549367d9e4b0b0a3e2543543/1581095461906-KAZ6J9E85FWLGX22YHW5/image-asset.jpeg?format=1000w"
+          src="/assets/image-asset.jpeg"
           alt="coffee-img" width=100%>
 
       </div>
@@ -87,15 +87,15 @@
     <div class="row">
       <!--4 images-->
       <div class="col col-lg-3 col-md-6 col-sm-6 col-6 order-lg-1 order-sm-2 order-2 py-2 px-2 image-col">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/18/56/64/5b/coffee-cake.jpg" class="py-2"
+        <img src="/assets/coffee-cake.jpg" class="py-2"
           alt="coffee-img" width=100%>
-        <img src="https://pbs.twimg.com/media/FJTTcxpXsAESMkq.jpg" class="py-2" alt="coffee-img" width=100%>
+        <img src="/assets/coffee-pexels-photo-8.jpeg" class="py-2" alt="coffee-img" width=100%>
       </div>
       <div class="col col-lg-3 py-2 px-2 col-md-6 col-sm-6 col-6 order-lg-2 order-sm-3 order-2 image-col">
         <img
-          src="https://s11.favim.com/orig/7/719/7195/71951/coffee-aesthetic-food-aesthetic-white-Favim.com-7195176.jpg"
+          src="/assets/1425485.webp"
           class="py-2" alt="coffee-img" width=100%>
-        <img src="https://data.whicdn.com/images/341991219/original.jpg" class="py-2" alt="coffee-img" width=100%>
+        <img src="/assets/croissant.jpg" class="py-2" alt="coffee-img" width=100%>
       </div>
       <!-- menu-content -->
       <div class="col col-lg-6 px-5 col-sm-12 col-md-12 order-lg-3 order-sm-1">
@@ -164,7 +164,7 @@
         <h2>GET IN TOUCH</h2>
         <br>
         <!--Description-->
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis est est. Vestibulum efficitur efficitur risus, eget porttitor velit consequat vel. Quisque condimentum tempus molestie. Sed id massa nec nisl facilisis lobortis. Aliquam odio metus, semper et condimentum ut, iaculis eget purus. Fusce ut urna non libero sollicitudin sagittis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin ultrices eleifend ipsum eget scelerisque. Nam eget massa eu enim rhoncus mollis at iaculis massa. Curabitur eu ante augue. Sed sem mi, egestas a rhoncus vel, facilisis a felis. Cras euismod pulvinar vestibulum. Aenean aliquam dignissim tellus eu pretium.</p>
+        <p>Thank you for visiting our little coffee shop! Please let us know how we can serve you better!</p>
         <br>
         <!--Adress-->
         <p>
